[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isso"
version = "0.14.0"
description = "lightweight Disqus alternative"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Martin Zimmermann", email = "info@posativ.org"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "itsdangerous",
    "Jinja2",
    "misaka>=2.0,<3.0",
    "mistune>=3.1,<4.0",
    "html5lib",
    "werkzeug>=1.0",
    "bleach",
    "setuptools",
]

[project.optional-dependencies]
doc = ["Sphinx"]
test = ["pytest", "pytest-cov"]

[project.scripts]
isso = "isso:main"

[project.urls]
Homepage = "https://github.com/isso-comments/isso/"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["isso*"]
exclude = ["isso.css", "isso.img", "isso.js", "isso.templates"]
namespaces = false

[tool.setuptools.package-data]
isso = [
    "js/embed.min.js",
    "js/embed.dev.js",
    "js/embed.dev.js.map",
    "js/count.min.js",
    "js/count.dev.js",
    "js/count.dev.js.map",
    "js/admin.js",
    "isso.cfg",
    "templates/admin.html",
    "templates/disabled.html",
    "templates/login.html",
    "css/admin.css",
    "css/isso.css",
    "img/isso.svg",
]

[tool.flake8]
ignore = ["E501", "E402"]
exclude = ["docs/conf.py", "node_modules", ".tox", ".eggs", ".git"]

[tool.pytest.ini_options]
testpaths = ["isso"]

[tool.ruff]
line-length = 127

[tool.ruff.lint]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F", "W"]
# Ignore E501 (line too long) and E402 (module level import not at top of file)
# to match the existing flake8 configuration
ignore = ["E402", "E501"]

exclude = [
    "docs/conf.py",
    "node_modules",
    ".tox",
    ".eggs",
    ".git",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "build",
    "dist",
]

[tool.ruff.format]
# Use double quotes for strings.
quote-style = "double"
# Respect magic trailing commas.
skip-magic-trailing-comma = false
